--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -16,9 +16,12 @@ contourpy==1.0.7
 cycler==0.11.0
 decorator==5.1.1
 entrypoints==0.4
+filelock==3.12.0
 fonttools==4.39.3
+fsspec==2023.5.0
 gitdb==4.0.9
 GitPython==3.1.29
+huggingface-hub==0.14.1
 hydralit==1.0.14
 hydralit-components==1.0.10
 idna==3.4
@@ -30,6 +33,8 @@ kiwisolver==1.4.4
 lxml==4.9.2
 MarkupSafe==2.1.1
 matplotlib==3.7.1
+mpmath==1.3.0
+networkx==3.1
 nltk==3.8.1
 numpy==1.23.4
 opencv-python==4.7.0.72
@@ -63,15 +68,19 @@ smmap==5.0.0
 soupsieve==2.4.1
 statsmodels==0.13.5
 streamlit==1.13.0
+sympy==1.12
 tenacity==8.2.2
 textblob==0.17.1
 threadpoolctl==3.1.0
+tokenizers==0.13.3
 toml==0.10.2
 tomli==2.0.1
 toolz==0.12.0
+torch==2.0.1
 tornado==6.2
 tqdm==4.65.0
 tracking-util==0.1.1
+transformers==4.29.1
 typing_extensions==4.4.0
 tzdata==2022.5
 tzlocal==4.2
